refactor: 세부적인 리팩토링 진행
- WinningLotto 생성자 대신 정적 팩토리 메소드로 객체 생성하도록 변환
- 역할의 기능이 잘드러나도록 네이밍 리팩토링
- Lotto 생성자에 중복 검증 추가